--- a/Dashboard.html
+++ b/Dashboard.html
@@ -16,10 +16,10 @@
             <h6>Unleash Victory with High-Performance Gaming Phones</h6>
             <a href="#" class="button-shop">SHOP</a>
         </div>
-        <img src="C:\Users\User\Desktop\OJT - Final Project\Dashboard\Assets\ant-design_picture-filled.png" alt="Gaming Icon" class="icon" />
+        <img src="Dashboard\Assets\ant-design_picture-filled.png" alt="Gaming Icon" class="icon" />
     </section>
     <section class="gradient">
-        <img src="C:\Users\User\Desktop\OJT - Final Project\Dashboard\Assets\asus.png" class="asus-phone" alt="asus phone">
+        <img src="Dashboard\Assets\asus.png" class="asus-phone" alt="asus phone">
         <div class="text-container">
             <h3>Asus ROG Phone 3</h3>
             <h6>Snapdragon 865+, 144Hz AMOLED Display, 6000mAh battery, Air Triggers</h6>
@@ -29,7 +29,7 @@
         <h2>OUR MOST POPULAR</h2>
         <ul class="product-cards">
             <li>
-                <img src="C:\Users\User\Desktop\OJT - Final Project\Dashboard\Assets\Rectangle 604.png" alt="ZTE nubia Red Magic 8S Pro+" />
+                <img src="Dashboard\Assets\Rectangle 604.png" alt="ZTE nubia Red Magic 8S Pro+" />
                 <div class="product-info">
                     <h3>ZTE nubia Red Magic 8S Pro+</h3>
                     <p>₱14,492.00</p>
@@ -37,7 +37,7 @@
                 <a href="">Order Now</a>
             </li>
             <li>
-                <img src="C:\Users\User\Desktop\OJT - Final Project\Dashboard\Assets\Rectangle 605.png" alt="Nubia Red Magic 7S Pro" />
+                <img src="Dashboard\Assets\Rectangle 605.png" alt="Nubia Red Magic 7S Pro" />
                 <div class="product-info">
                     <h3>Nubia Red Magic 7S Pro</h3>
                     <p>₱25,000.00</p>
@@ -45,7 +45,7 @@
                 <a href="">Order Now</a>
             </li>
             <li>
-                <img src="C:\Users\User\Desktop\OJT - Final Project\Dashboard\Assets\Rectangle 606.png" alt="Nubia Red Magic 8 Pro" />
+                <img src="Dashboard\Assets\Rectangle 606.png" alt="Nubia Red Magic 8 Pro" />
                 <div class="product-info">
                     <h3>Nubia Red Magic 8 Pro</h3>
                     <p>₱10,000.00</p>
@@ -59,27 +59,27 @@
         <h3>Quality is Our First Priority</h3>
         <ul>
             <li>
-                <img src="C:\Users\User\Desktop\OJT - Final Project\Dashboard\Assets\Group 362.png" alt="Ultra-fast Processor" />
+                <img src="Dashboard\Assets\Group 362.png" alt="Ultra-fast Processor" />
                 <h4>Ultra-fast Processor</h4>
                 <p>Latest processors for quick response, fast loading, and smooth multitasking.</p>
             </li>
             <li>
-                <img src="C:\Users\User\Desktop\OJT - Final Project\Dashboard\Assets\Group 362.png" alt="Immersive Audio Technology" />
+                <img src="Dashboard\Assets\Group 362.png" alt="Immersive Audio Technology" />
                 <h4>Immersive Audio Technology</h4>
                 <p>Advanced stereo speakers for spatial and realistic gaming sounds.</p>
             </li>
             <li>
-                <img src="C:\Users\User\Desktop\OJT - Final Project\Dashboard\Assets\Group 362.png" alt="Adaptive Touch Controls" />
+                <img src="Dashboard\Assets\Group 362.png" alt="Adaptive Touch Controls" />
                 <h4>Adaptive Touch Controls</h4>
                 <p>Precision touch controls with features like pressure-sensitive buttons for immersive gameplay.</p>
             </li>
             <li>
-                <img src="C:\Users\User\Desktop\OJT - Final Project\Dashboard\Assets\Group 362.png" alt="Large Battery Capacity" />
+                <img src="Dashboard\Assets\Group 362.png" alt="Large Battery Capacity" />
                 <h4>Large Battery Capacity</h4>
                 <p>Large battery capacity for uninterrupted gaming sessions.</p>
             </li>
         </ul>
-        <img src="C:\Users\User\Desktop\OJT - Final Project\Dashboard\Assets\Frame 1079.png" alt="games">
+        <img src="Dashboard\Assets\Frame 1079.png" alt="games">
     </section>
     </main>
 </body>
