--- a/Login/login.html
+++ b/Login/login.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles-login.css">
+    <script src="script-login.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <aside>
-        <img src="C:\Users\User\Desktop\OJT - Final Project\Log in\sidenav-bg.png" alt="Game Controller" class="controller-image">
+        <img src="sidenav-bg.png" alt="Game Controller" class="controller-image">
     </aside>
     <main>
         <h1>Welcome!</h1>
         <p>Meet the good gaming today</p>
-        <form>
+        <form id="loginForm" onsubmit="handleLogin(event);">
             <label for="email">E-mail</label>
             <input type="email" id="email" placeholder="Type your e-mail" required>
             <label for="password">Password</label>
             <input type="password" id="password" placeholder="Type your password" required>
             <button type="submit">Sign In</button>
         </form>
-        <p class="signup-link">Don't have an account? <a href="#">Sign Up</a></p>
+        <p class="signup-link">Don't have an account? <a href="Create Account.html">Sign Up</a></p>
     </main>
 </body>
 </html>
