Use object to to change dynamically

--- a/Product/products.html
+++ b/Product/products.html
@@ -59,9 +59,10 @@
             <h1>Recommeded</h1>
             <ul id="list">
                 <li>
-                    <img class="product-image" src="./assets/zte-nubia-red-magic-9-pro.jpg"
-                        alt="zte-nubia-red-magic-9-pro">
-                    <h1>ZTE nubia Red Magic 9 Pro</h1>
+                    <a href="../Product info/index.html" onclick="selectProduct('ZTE Nubia Red Magic 9 Pro')">
+                        <img class="product-image" src="./assets/zte-nubia-red-magic-9-pro.jpg"
+                            alt="zte-nubia-red-magic-9-pro"> </a>
+                    <h1>ZTE Nubia Red Magic 9 Pro</h1>
                     <span class="price">₱ 24,000.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
                     <div class="rating">
@@ -74,8 +75,9 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets/Asus ROG Phone 7 Ultimate.jpg"
-                        alt="Asu ROG Phone 7 Ultimate">
+                    <a href="../Product info/index.html" onclick="selectProduct('Asus ROG Phone 7 Ultimate')">
+                        <img class="product-image" src="./assets/Asus ROG Phone 7 Ultimate.jpg"
+                            alt="Asus ROG Phone 7 Ultimate"> </a>
                     <h1>Asu ROG Phone 7 Ultimate</h1>
                     <span class="price">₱ 20,499.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -87,10 +89,13 @@
                         <i class='bx bx-star'></i>
                         <span class="number-rating">(120)</span>
                     </div>
+
                 </li>
+
                 <li>
-                    <img class="product-image" src="./assets/Samsung Galaxy S24 Ultra.jpg"
-                        alt="Samsung Galaxy S24 Ultra">
+                    <a href="../Product info/index.html" onclick="selectProduct('Samsung Galaxy S24 Ultra')">
+                        <img class="product-image" src="./assets/Samsung Galaxy S24 Ultra.jpg"
+                            alt="Samsung Galaxy S24 Ultra"></a>
                     <h1>Samsung Galaxy S24 Ultra</h1>
                     <span class="price">₱ 30,999.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -104,7 +109,8 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets/Xiaomi POCO F4 GT.jpg" alt="Xiaomi POCO F4 GT">
+                    <a href="../Product info/index.html" onclick="selectProduct('Xiaomi POCO F4 GT')">
+                        <img class="product-image" src="./assets/Xiaomi POCO F4 GT.jpg" alt="Xiaomi POCO F4 GT"></a>
                     <h1>Xiaomi POCO F4 GT</h1>
                     <span class="price">₱ 21,499.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -123,7 +129,9 @@
             <h1>Best Seller</h1>
             <ul id="list">
                 <li>
-                    <img class="product-image" src="./assets/Infinix Note 30 Pro 8.jpg" alt="Infinix Note 30 Pro 8">
+                    <a href="../Product info/index.html" onclick="selectProduct('Infinix Note 30 Pro 8')">
+                        <img class="product-image" src="./assets/Infinix Note 30 Pro 8.jpg"
+                            alt="Infinix Note 30 Pro 8"></a>
                     <h1>Infinix Note 30 Pro 8</h1>
                     <span class="price">₱9,599.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -137,7 +145,8 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets/Lenovo Legion Y70.jpg" alt="Lenovo Legion Y70">
+                    <a href="../Product info/index.html" onclick="selectProduct('Lenovo Legion Y70')">
+                        <img class="product-image" src="./assets/Lenovo Legion Y70.jpg" alt="Lenovo Legion Y70"></a>
                     <h1>Lenovo Legion Y70</h1>
                     <span class="price">₱10,599.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -151,7 +160,8 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets//Tecno Spark 10 Pro.jpg" alt="Tecno Spark 10 Pro">
+                    <a href="../Product info/index.html" onclick="selectProduct('Tecno Spark 10 Pro')">
+                        <img class="product-image" src="./assets//Tecno Spark 10 Pro.jpg" alt="Tecno Spark 10 Pro"></a>
                     <h1>Tecno Spark 10 Pro</h1>
                     <span class="price">₱13,000.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -165,7 +175,8 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets/Black Shark 5 Pro 8.jpg" alt="Black Shark 5 Pro 8">
+                    <a href="../Product info/index.html" onclick="selectProduct('Black Shark 5 Pro 8')">
+                        <img class="product-image" src="./assets/Black Shark 5 Pro 8.jpg" alt="Black Shark 5 Pro 8"></a>
                     <h1>Black Shark 5 Pro 8</h1>
                     <span class="price">₱15,599.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -184,7 +195,8 @@
             <h1>All Products</h1>
             <ul id="list">
                 <li>
-                    <img class="product-image" src="./assets/Xiaomi Poco X5 Pro.jpg" alt="Xiaomi Poco X5 Pro">
+                    <a href="../Product info/index.html" onclick="selectProduct('Xiaomi Poco X5 Pro')">
+                        <img class="product-image" src="./assets/Xiaomi Poco X5 Pro.jpg" alt="Xiaomi Poco X5 Pro"></a>
                     <h1>Xiaomi Poco X5 Pro"</h1>
                     <span class="price">₱16,000.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -198,7 +210,8 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets/Black Shark 5 Pro 8.jpg" alt="Black Shark 5 Pro 8">
+                    <a href="../Product info/index.html" onclick="selectProduct('Black Shark 5 Pro 8')">
+                        <img class="product-image" src="./assets/Black Shark 5 Pro 8.jpg" alt="Black Shark 5 Pro 8"></a>
                     <h1>Black Shark 5 Pro 8</h1>
                     <span class="price">₱15,599.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -212,7 +225,9 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets/Infinix Note 30 Pro 8.jpg" alt="Infinix Note 30 Pro 8">
+                    <a href="../Product info/index.html" onclick="selectProduct('Infinix Note 30 Pro 8')">
+                        <img class="product-image" src="./assets/Infinix Note 30 Pro 8.jpg"
+                            alt="Infinix Note 30 Pro 8"></a>
                     <h1>Infinix Note 30 Pro 8</h1>
                     <span class="price">₱9,599.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -226,7 +241,8 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets//Tecno Spark 10 Pro.jpg" alt="Tecno Spark 10 Pro">
+                    <a href="../Product info/index.html" onclick="selectProduct('Tecno Spark 10 Pro')">
+                        <img class="product-image" src="./assets//Tecno Spark 10 Pro.jpg" alt="Tecno Spark 10 Pro"></a>
                     <h1>Tecno Spark 10 Pro</h1>
                     <span class="price">₱13,000.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -240,8 +256,9 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets/Asus ROG Phone 7 Ultimate.jpg"
-                        alt="Asu ROG Phone 7 Ultimate">
+                    <a href="../Product info/index.html" onclick="selectProduct('Asu ROG Phone 7 Ultimate')">
+                        <img class="product-image" src="./assets/Asus ROG Phone 7 Ultimate.jpg"
+                            alt="Asu ROG Phone 7 Ultimate"></a>
                     <h1>Asu ROG Phone 7 Ultimate</h1>
                     <span class="price">₱ 20,499.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -255,7 +272,9 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets/Nubia Red Magic 8 Pro.jpg" alt="Nubia Red Magic 8 Pro">
+                    <a href="../Product info/index.html" onclick="selectProduct('Nubia Red Magic 8 Pro')">
+                        <img class="product-image" src="./assets/Nubia Red Magic 8 Pro.jpg"
+                            alt="Nubia Red Magic 8 Pro"></a>
                     <h1>Nubia Red Magic 8 Pro</h1>
                     <span class="price">₱13,000.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -269,7 +288,8 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets/redmagic.jpg" alt="Nubia Red Magic 7S Pro">
+                    <a href="../Product info/index.html" onclick="selectProduct('Nubia Red Magic 7S Pro')">
+                        <img class="product-image" src="./assets/redmagic.jpg" alt="Nubia Red Magic 7S Pro"></a>
                     <h1>Nubia Red Magic 7S Pro</h1>
                     <span class="price">₱10,000.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
@@ -283,7 +303,8 @@
                     </div>
                 </li>
                 <li>
-                    <img class="product-image" src="./assets/Nubia Red Magis 7s.jpg" alt="Nubia Red Magis 7s">
+                    <a href="../Product info/index.html" onclick="selectProduct('Nubia Red Magis 7s')">
+                        <img class="product-image" src="./assets/Nubia Red Magis 7s.jpg" alt="Nubia Red Magis 7s"></a>
                     <h1>Nubia Red Magis 7s</h1>
                     <span class="price">₱9,599.00</span>
                     <button class="cart-btn"><i class='bx bx-cart'></i> Add to Cart</button>
