--- a/Product info/index.html
+++ b/Product info/index.html
@@ -189,7 +189,7 @@
                 </li>
             </ul>
         </footer>
-        <script src="./script.js"> </script>
+        <script src="script.js"> </script>
 
 
 </body>
