--- a/Product info/index.html
+++ b/Product info/index.html
@@ -31,10 +31,14 @@
             </ul>
         </nav>
         <div class="icons">
-            <i class='bx bx-cart' id="cart-icon"></i>
+            <a href="../Cart/Cart.html">
+                <i class='bx bx-cart' id="cart-icon"></i>
+            </a>
             <span id="cart-count">0</span>
+
             <i class='bx bx-user'></i>
         </div>
+
 
         <div class="menu-toggle">
             <i class="bx bx-menu"></i>
