added shipping information

--- a/Cart/Cart.html
+++ b/Cart/Cart.html
@@ -91,11 +91,36 @@
                     <a href="#" class="back-shopping">← Back to shopping</a>
                         <div class="summary-details">
                             <p>Total Price: <span class="total-price">₱24,000.00</span></p>
-                            <button class="checkout">Check out</button>
                         </div>
                 </div>
             </div>
         </section>
+
+        <section class="lower-content">
+            <h1>Shipping Information</h1>
+            <form class="shipping-form">
+                <div class="name-fields">
+                    <input type="text" placeholder="First Name">
+                    <input type="text" placeholder="Last Name">
+                </div>
+                <input type="text" placeholder="Address">
+                <input type="text" placeholder="Address 2">
+                <div class="location-fields">
+                    <input type="text" placeholder="City">
+                    <input type="text" placeholder="State">
+                    <input type="text" placeholder="ZIP Code">
+                </div>
+            </form>
+            <div class="order-summary">
+                <h2>Order Summary</h2>
+                <p>Items <span>$40</span></p>
+                <p>Shipping Fee <span>$5</span></p>
+                <hr>
+                <p class="total">Total Amount <span>$45</span></p>
+                <button class="checkout-btn">Proceed to Checkout</button>
+            </div>
+        </section>
+        
     </main>
     <script src="script.js"></script>
 </body>
