Adding Shipping Information then proceed to checkout

--- a/Cart/Cart.html
+++ b/Cart/Cart.html
@@ -83,7 +83,7 @@
                 </tbody>
             </table>
 
-             <div class="cart-summary">
+            <div class="cart-summary">
                 <div class="promo-section">
                     <label for="promo-code">Promocode</label>
                     <input type="text" id="promo-code" value="">
@@ -95,7 +95,6 @@
                     <a href="../Product/products.html" class="back-shopping">← Back to shopping</a>
                     <div class="summary-details">
                         <p>Total Price: <span class="all-total-price"></span></p>
-                        <button class="checkout">Check out</button>
                     </div>
                 </div>
             </div>
@@ -118,14 +117,14 @@
             </form>
             <div class="order-summary">
                 <h2>Order Summary</h2>
-                <p>Items <span>$40</span></p>
+                <p>Items <span class="all-total-price"></span></p>
                 <p>Shipping Fee <span>$5</span></p>
                 <hr>
                 <p class="total">Total Amount <span>$45</span></p>
                 <button class="checkout-btn">Proceed to Checkout</button>
             </div>
         </section>
-        
+
     </main>
     <script src="script.js"></script>
 </body>
