--- a/Payment Receipt/receipt.html
+++ b/Payment Receipt/receipt.html
@@ -46,7 +46,7 @@
                     <p class="message">You can track your order in the “My Order” section</p>
                 </div>
                 <div class="order-buttons">
-                    <button class="continue-shopping">Continue shopping</button>
+                    <button id="continueShopping" class="continue-shopping">Continue shopping</button>
                 </div>
             </section>
         </section>
@@ -70,5 +70,6 @@
             </li>
         </ul>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
