--- a/Cart/Cart.html
+++ b/Cart/Cart.html
@@ -24,7 +24,7 @@
         <nav class="nav-menu">
             <ul>
                 <li>|</li>
-                <li>Home</li>
+                <li><a href="../Product/products.html">Home</a></li>
                 <li>Discover</li>
                 <li>Blog</li>
                 <li>About Us</li>
