--- a/CreateAccount/CreateAccount.html
+++ b/CreateAccount/CreateAccount.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <script src="script-createaccount.js" defer></script>
     <title>Document</title>
 </head>
+
 <body>
     <aside>
         <img src="sidenav-bg.png" alt="Game Controller" class="controller-image">
@@ -22,15 +24,17 @@
             <input type="password" id="password" placeholder="Type your password" required>
             <div class="terms-container">
                 <label>
-                    <input type="checkbox" required> 
-                    <p>By creating an account means you agree to the 
-                    <a href="#" class="terms-link">Terms and Conditions</a>, and our 
-                    <a href="#" class="privacy-link">Privacy Policy</a>.</p>
+                    <input type="checkbox" required>
+                    <p>By creating an account means you agree to the
+                        <a href="#" class="terms-link">Terms and Conditions</a>, and our
+                        <a href="#" class="privacy-link">Privacy Policy</a>.
+                    </p>
                 </label>
             </div>
             <button type="submit">Sign Up</button>
         </form>
-        <p class="signup-link">Already have an account? <a href="Login.html">Sign In</a></p>
+        <p class="signup-link">Already have an account? <a href="../Login/login.html">Sign In</a></p>
     </main>
 </body>
+
 </html>
