--- a/Payment Modal/payment.html
+++ b/Payment Modal/payment.html
@@ -1,82 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Modal</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- Payment Modal -->
+<div class="modal fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered custom-modal">
+        <div class="modal-content p-3">
+            <!-- Modal Header -->
+            <div class="modal-header border-0">
+                <h5 class="modal-title" id="paymentModalLabel">Payment Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
 
-    <!-- Button to Open Modal -->
-    <div class="container text-center mt-5">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#paymentModal">
-            Open Payment Modal
-        </button>
-    </div>
-
-    <!-- Payment Modal -->
-    <div class="modal fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered custom-modal">
-            <div class="modal-content p-3">
-                <!-- Modal Header -->
-                <div class="modal-header border-0">
-                    <h5 class="modal-title" id="paymentModalLabel">Payment Details</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <!-- Modal Body -->
+            <div class="modal-body">
+                <!-- Payment Logos -->
+                <div class="text-center mb-3">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_Logo.png" alt="Visa" width="50">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/MasterCard_Logo.svg" alt="Mastercard"
+                        width="50">
                 </div>
 
-                <!-- Modal Body -->
-                <div class="modal-body">
-                    <!-- Payment Logos -->
-                    <div class="text-center mb-3">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_Logo.png" alt="Visa" width="50">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/MasterCard_Logo.svg" alt="Mastercard" width="50">
+                <!-- Payment Form -->
+                <form id="paymentForm">
+                    <div class="mb-3">
+                        <label for="cardName" class="form-label">Card Details</label>
+                        <input type="text" class="form-control" id="cardName" placeholder="Enter cardholder name"
+                            required>
+                        <small class="text-danger d-none" id="nameError">Please enter a valid name.</small>
                     </div>
 
-                    <!-- Payment Form -->
-                    <form id="paymentForm">
-                        <div class="mb-3">
-                            <label for="cardName" class="form-label">Card Details</label>
-                            <input type="text" class="form-control" id="cardName" placeholder="Enter cardholder name" required>
-                            <small class="text-danger d-none" id="nameError">Please enter a valid name.</small>
-                        </div>
+                    <div class="mb-3">
+                        <input type="text" class="form-control" id="cardNumber" placeholder="Card Number" maxlength="19"
+                            required>
+                        <small class="text-danger d-none" id="cardError">Invalid card number.</small>
+                    </div>
 
-                        <div class="mb-3">
-                            <input type="text" class="form-control" id="cardNumber" placeholder="Card Number" maxlength="19" required>
-                            <small class="text-danger d-none" id="cardError">Invalid card number.</small>
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <input type="text" class="form-control" id="expiration" placeholder="Expiration (MM/YY)"
+                                required>
+                            <small class="text-danger d-none" id="expError">Invalid expiration date.</small>
                         </div>
+                        <div class="col-md-6 mb-3">
+                            <input type="text" class="form-control" id="cvc" placeholder="CVC" maxlength="3" required>
+                            <small class="text-danger d-none" id="cvcError">Invalid CVC.</small>
+                        </div>
+                    </div>
 
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <input type="text" class="form-control" id="expiration" placeholder="Expiration (MM/YY)" required>
-                                <small class="text-danger d-none" id="expError">Invalid expiration date.</small>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <input type="text" class="form-control" id="cvc" placeholder="CVC" maxlength="3" required>
-                                <small class="text-danger d-none" id="cvcError">Invalid CVC.</small>
-                            </div>
-                        </div>
+                    <!-- Total Amount -->
+                    <div class="d-flex justify-content-between fw-bold">
+                        <span>Total Amount:</span>
+                        <span class="text-primary">$45</span>
+                    </div>
 
-                        <!-- Total Amount -->
-                        <div class="d-flex justify-content-between fw-bold">
-                            <span>Total Amount:</span>
-                            <span class="text-primary">$45</span>
-                        </div>
-
-                        <!-- Pay Button -->
-                        <div class="mt-4 text-center">
-                            <button type="submit" class="btn btn-dark w-100">Pay</button>
-                        </div>
-                    </form>
-                </div>
+                    <!-- Pay Button -->
+                    <div class="mt-4 text-center">
+                        <button type="submit" class="btn btn-dark w-100">Pay</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
-    
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- External JavaScript -->
-    <script src="script.js"></script>
-
-</body>
-</html>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
