--- a/Product/products.html
+++ b/Product/products.html
@@ -25,9 +25,11 @@
             </ul>
         </nav>
         <div class="icons">
-            <i class='bx bx-cart' id="cart-icon">
-                <span id="cart-count">0</span>
-            </i>
+            <a href="../Cart/Cart.html">
+                <i class='bx bx-cart' id="cart-icon"></i>
+            </a>
+            <span id="cart-count">0</span>
+
             <i class='bx bx-user'></i>
         </div>
         <div class="menu-toggle">
