--- a/Payment Modal/payment.html
+++ b/Payment Modal/payment.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Modal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
 
     <!-- Button to Open Modal -->
@@ -29,30 +31,36 @@
                 <div class="modal-body">
                     <!-- Payment Logos -->
                     <div class="text-center mb-3">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_Logo.png" alt="Visa" width="50">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/MasterCard_Logo.svg" alt="Mastercard" width="50">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_Logo.png" alt="Visa"
+                            width="50">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/MasterCard_Logo.svg"
+                            alt="Mastercard" width="50">
                     </div>
 
                     <!-- Payment Form -->
                     <form id="paymentForm">
                         <div class="mb-3">
                             <label for="cardName" class="form-label">Card Details</label>
-                            <input type="text" class="form-control" id="cardName" placeholder="Enter cardholder name" required>
+                            <input type="text" class="form-control" id="cardName" placeholder="Enter cardholder name"
+                                required>
                             <small class="text-danger d-none" id="nameError">Please enter a valid name.</small>
                         </div>
 
                         <div class="mb-3">
-                            <input type="text" class="form-control" id="cardNumber" placeholder="Card Number" maxlength="19" required>
+                            <input type="text" class="form-control" id="cardNumber" placeholder="Card Number"
+                                maxlength="19" required>
                             <small class="text-danger d-none" id="cardError">Invalid card number.</small>
                         </div>
 
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                <input type="text" class="form-control" id="expiration" placeholder="Expiration (MM/YY)" required>
+                                <input type="text" class="form-control" id="expiration" placeholder="Expiration (MM/YY)"
+                                    required>
                                 <small class="text-danger d-none" id="expError">Invalid expiration date.</small>
                             </div>
                             <div class="col-md-6 mb-3">
-                                <input type="text" class="form-control" id="cvc" placeholder="CVC" maxlength="3" required>
+                                <input type="text" class="form-control" id="cvc" placeholder="CVC" maxlength="3"
+                                    required>
                                 <small class="text-danger d-none" id="cvcError">Invalid CVC.</small>
                             </div>
                         </div>
@@ -65,18 +73,20 @@
 
                         <!-- Pay Button -->
                         <div class="mt-4 text-center">
-                            <button type="submit" class="btn btn-dark w-100">Pay</button>
+                            <button type="submit" class="btn btn-dark w-100" id="pay-button">Pay</button>
+
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- External JavaScript -->
     <script src="script.js"></script>
 
 </body>
+
 </html>
